--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,28 @@
   <body>
     <div id="app">
       <div id="chat_container"></div>
+      <h1>CodeLab Chat</h1>
+      <br>
+      <h2>About</h2>
+      <p>CodeLab Chat, is <em>a customized version</em> of the ChatGPT3 app </p>
+      <p>It is an AI-based web application with a simple user interface that is similar to the ChatGPT app.</p>
+      <br>
+      <p>
+        This app was created from OpenAI Codex model series. (text-davinci-003 model) <br>
+        It is from the GPT-3 series' offspring, and was trained on both natural language and trillions of lines of code. <br>
+        In addition to being adept in more than a dozen languages, including JavaScript, Go, Perl, PHP, Ruby, Swift, TypeScript, SQL, and even Shell,<br>
+        it excels in Python. 
+      </p>
+      <br>
+      <p><b>Features:</b></p>
+      <ul>
+        <li>Rewrite code for efficiency</li>
+        <li>Add comments</li>
+        <li>Bring knowledge to you, such as finding a useful library or API call for an application</li>
+        <li>Complete your next line or function in context</li>
+        <li>Turn comments into code</li>
+      </ul>
+      
 
       <form>
         <textarea name="prompt" rows="1" cols="1" placeholder="Ask CodeLab..." ></textarea>
